docs/docusaurus/versions/version-4.5.1/en-US/source/10.permission/3.reset_admin_password.md
# Forgot Admin Password
> TuGraph provides a password reset feature. If you forget the password for the admin account, you can reset it by following these steps.

## 1. Reset Password
Firstly, the TuGraph server needs to be stopped. If it is deployed within a container, you will need to enter the container and execute the following command:

```bash
lgraph_server -c /usr/local/etc/lgraph.json -d stop
```

When starting the TuGraph server again, add the following parameter:

```bash
--reset_admin_password 1
```

Here is an example:
```bash
lgraph_server -c /usr/local/etc/lgraph.json --reset_admin_password 1 --log_dir ""
```

This operation will reset the password for the admin account to the default password: 73@TuGraph when starting the TuGraph server.
If the password reset is successful, you will receive the message "Reset admin password successfully" and the current server process will be closed.

## 2.Restart the Service

You need to restart the server in normal mode and then use the default account and password to log in. After logging in, you can reset the password to continue using TuGraph.
The command to restart the TuGraph service is as follows:

```bash
lgraph_server -c /usr/local/etc/lgraph.json -d start
```
